feat: adding Chromatic

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -4,14 +4,14 @@
   padding-left: 1rem;
   padding-right: 1rem;
   border-radius: 0.25rem;
-  border: 1px solid black;
+  border: 2px solid rgb(32, 27, 27);
   border-color: inherit;
   background-color: #fff;
 }
 
 .small {
   height: 2rem;
-  font-size: 0.875rem;
+  font-size: 0.870rem;
 }
 
 .medium {
